[COLAB-1400]  fix text overlap

--- a/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-ContestCard.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-ContestCard.scss
@@ -66,6 +66,8 @@ $c-ContestCard__shadow--hover:  0 0 10px  $t-Color__grey--light;
   font-size: 14px;
   line-height: 19px;
   padding: 8px;
+  margin-bottom: 8px;
+  padding-bottom: 0px;
   overflow: hidden;
   color: $c-ContestCard__text__textColor;
   height: $c-ContestCard__text__height;
